--- a/templates/main.html
+++ b/templates/main.html
@@ -5,23 +5,15 @@
     <!-- bootstrap style link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css style link -->
-    <link href="static/css/style.css" rel="stylesheet" type ="text/css" />
-    
-    <style>
-        .box {
-            height: 100%;
-            justify-content: center;
-            border-style: solid;
-            border-width: 1px;
-        }
-        .week-header{
-            background-color: #ffc670;
-            font-weight: bold;
-        }
-    </style>
+    <link href="../static/css/style.css" rel="stylesheet" type ="text/css" />
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg bg-secondary">
+        <img height = 50px width = 50px src="../static/imgs/tempfiller.png" alt="temporary filler for some sort of logo">
+        <span class="navbar-brand mb-0 h1 text-light">College Schedules</span>
+    </nav>
+    <br>
     <div class="container-fluid" style="border: 1px; border-style: solid; height: 100vh; width: 80vw; margin-right: 0%;">
         <div class="row" style="height: 100%;">
             <div class="col-sm" style="padding: 0%;">
