--- a/templates/main.html
+++ b/templates/main.html
@@ -5,66 +5,114 @@
     <!-- bootstrap style link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css style link -->
-    <link href="../static/css/style.css" rel="stylesheet" type ="text/css" />
+    <link href="static/css/style.css" rel="stylesheet" type ="text/css" />
+    
+    <style>
+        .box {
+            height: 100%;
+            justify-content: center;
+            box-shadow: inset 0 0 0 1px black;
+        }
+        .week-header{
+            background-color: #ffc670;
+            font-weight: bold;
+            text-align: center;
+            box-shadow: inset 0 0 0 1px black;
+            height: 100%;
+            overflow: hidden;
+        }
+        .col-5th {
+            flex: 0 0 auto;
+            width: 20%;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-secondary">
-        <img height = 50px width = 50px src="../static/imgs/tempfiller.png" alt="temporary filler for some sort of logo">
-        <span class="navbar-brand mb-0 h1 text-light">College Schedules</span>
-    </nav>
-    <br>
-    <div class="container-fluid" style="border: 1px; border-style: solid; height: 100vh; width: 80vw; margin-right: 0%;">
+    <div class="container-fluid" style="height: 94vh; width: 94vw; margin: 3vh 3vw 3vh 3vw;">
         <div class="row" style="height: 100%;">
-            <div class="col-sm" style="padding: 0%;">
+            <!-- sidebar -->
+            <div class="col-2" style="padding: 0%; height: 100%;">
                 <div class="box">
                     <div class="week-header">
-                        Sunday
+                        List
+                    </div>
+                </div>
+            </div> 
+            <!-- end sidebar -->
+
+            <!-- time -->
+            <div class="col-1" style="padding: 0%; height: 100%;">
+                <div class="box">
+                    <div class="week-header">
+                        time
                     </div>
                 </div>
             </div>
-            <div class="col-sm" style="padding: 0%;">
-                <div class="box">
-                    <div class="week-header">
-                        Monday
+            <!-- end time -->
+
+            <div class="col-9" style="height: 100%;">
+
+                <!-- weekdays -->
+                <div class="row" style="height: 5%;">
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="week-header">
+                            Mon
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="week-header">
+                            Tue
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="week-header">
+                            Wed
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="week-header">
+                            Thu
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="week-header">
+                            Fri
+                        </div>
+                    </div>
+                </div>
+                <!-- end weekdays -->
+
+                
+                <div class="row" style="height: 95%;">
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="box">
+                            
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="box">
+                            
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="box">
+                           
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="box">
+                           
+                        </div>
+                    </div>
+                    <div class="col-5th" style="padding: 0%;">
+                        <div class="box">
+                            
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm" style="padding: 0%;">
-                <div class="box">
-                    <div class="week-header">
-                        Tuesday
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm" style="padding: 0%;">
-                <div class="box">
-                    <div class="week-header">
-                        Wednesday
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm" style="padding: 0%;">
-                <div class="box">
-                    <div class="week-header">
-                        Thursday
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm" style="padding: 0%;">
-                <div class="box">
-                    <div class="week-header">
-                        Friday
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm" style="padding: 0%;">
-                <div class="box">
-                    <div class="week-header">
-                        Saturday
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
