--- a/templates/main.html
+++ b/templates/main.html
@@ -5,13 +5,14 @@
     <!-- bootstrap style link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- css style link -->
-    <link href="static/css/style.css" rel="stylesheet" type ="text/css" />
+    <!-- <link href="static/css/style.css" rel="stylesheet" type ="text/css" /> -->
     
     <style>
         .box {
             height: 100%;
             justify-content: center;
             box-shadow: inset 0 0 0 1px black;
+            padding: 0%;
         }
         .week-header{
             background-color: #ffc670;
@@ -25,6 +26,23 @@
             flex: 0 0 auto;
             width: 20%;
         }
+        .time {
+            width: 100%; 
+            text-align: center; 
+            border-bottom: 1px solid #000; 
+            line-height: 0.1em;
+            /* margin: 10px 0 20px;  */
+        } 
+        .section {
+            background: #fff;
+            padding: 0 10px;
+        }
+        .timestamp {
+            width: 100%;
+            margin: 0%;
+            height: 7.142857%;
+        }
+
     </style>
 </head>
 
@@ -43,9 +61,67 @@
 
             <!-- time -->
             <div class="col-1" style="padding: 0%; height: 100%;">
-                <div class="box">
-                    <div class="week-header">
-                        time
+                <div class="week-header" style="height: 5%; background-color: #fff; box-shadow: none;">
+                </div>
+                <div class="box" style="height: 95%;">
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">8:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">9:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">10:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">11:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">12:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">13:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">14:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">15:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">16:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">17:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">18:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">19:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">20:00</span></div>
+                    </div>
+
+                    <div class="row timestamp">
+                        <div class="time"><span class="section">21:00</span></div>
+                    </div>
+
+                    <div class="row timestamp" style="width: 100%; margin: 0%; height: 0%;">
+                        <div class="time" style="height: 0; border-bottom: 0;"><span class="section">22:00</span></div>
                     </div>
                 </div>
             </div>
@@ -56,58 +132,118 @@
                 <!-- weekdays -->
                 <div class="row" style="height: 5%;">
                     <div class="col-5th" style="padding: 0%;">
-                        <div class="week-header">
-                            Mon
-                        </div>
+                        <div class="week-header">Mon</div>
                     </div>
                     <div class="col-5th" style="padding: 0%;">
-                        <div class="week-header">
-                            Tue
-                        </div>
+                        <div class="week-header">Tue</div>
                     </div>
                     <div class="col-5th" style="padding: 0%;">
-                        <div class="week-header">
-                            Wed
-                        </div>
+                        <div class="week-header">Wed</div>
                     </div>
                     <div class="col-5th" style="padding: 0%;">
-                        <div class="week-header">
-                            Thu
-                        </div>
+                        <div class="week-header">Thu</div>
                     </div>
                     <div class="col-5th" style="padding: 0%;">
-                        <div class="week-header">
-                            Fri
-                        </div>
+                        <div class="week-header">Fri</div>
                     </div>
                 </div>
                 <!-- end weekdays -->
 
                 
                 <div class="row" style="height: 95%;">
+                    <!-- Monday -->
                     <div class="col-5th" style="padding: 0%;">
                         <div class="box">
-                            
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
                         </div>
                     </div>
+                    <!-- Tuesday -->
                     <div class="col-5th" style="padding: 0%;">
                         <div class="box">
-                            
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
                         </div>
                     </div>
+                    <!-- Wednesday -->
                     <div class="col-5th" style="padding: 0%;">
                         <div class="box">
-                           
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
                         </div>
                     </div>
+                    <!-- Thursday -->
                     <div class="col-5th" style="padding: 0%;">
                         <div class="box">
-                           
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
                         </div>
                     </div>
+                    <!-- Friday -->
                     <div class="col-5th" style="padding: 0%;">
                         <div class="box">
-                            
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
+                            <div class="row timestamp"><div class="time"></div></div>
                         </div>
                     </div>
                 </div>
