--- a/templates/main.html
+++ b/templates/main.html
@@ -78,7 +78,7 @@
 
             <!-- times -->
             <div class="col-1" style="padding: 0%; height: 100%;">
-                <div class="week-header" style="height: 5%; background-color: #fff; box-shadow: none;">
+                <div class="week-header" style="height: 5%; background-color: #fff; box-shadow: none; margin-bottom: 1px;">
                 </div>
                 <div id="times" class="box" style="height: 95%;">
                     <script>
@@ -168,6 +168,7 @@
                     var weekdays = document.getElementById("weekdays")
                     for(var child of weekdays.children) {
                         var day = (child.children)[0]
+                        var dayName = day.id
                         // for each day of the week
                         for(let i = start; i < end; i++) {
                             // create the element
@@ -177,7 +178,7 @@
                             time.setAttribute("class", "time")
                             var innerRow = document.createElement("div")
                             innerRow.setAttribute("class", "row")
-                            innerRow.setAttribute("style", "height:100%; padding:1px; margin:0; padding-bottom:0")
+                            innerRow.setAttribute("style", "height:100%; padding-right:1px; padding-left:1px; margin:0; padding-bottom:0; padding-top:1")
 
                             time.appendChild(innerRow)
                             row.appendChild(time)
@@ -185,11 +186,12 @@
 
                             var numPeople = parseFloat(document.getElementById("numPeople").innerHTML)
                             // for every person
-                            for(let i = 0; i< numPeople; i++) {
+                            for(let j = 0; j< numPeople; j++) {
 
                                 var tabs = document.createElement("div")
                                 tabs.setAttribute("class", "col-2")
-                                tabs.setAttribute("style", "padding:0px")
+                                tabs.setAttribute("style", "padding:0px;")
+                                tabs.setAttribute("id", dayName + " " + parseInt(i) + " " + parseInt(j))
                                 // tabs.innerHTML = "hi"
                                 innerRow.appendChild(tabs)
                             }
@@ -201,4 +203,5 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="../static/javascript/main.js"></script>
 </body>
