--- a/templates/main.html
+++ b/templates/main.html
@@ -11,8 +11,7 @@
         .box {
             height: 100%;
             justify-content: center;
-            border-width: 0 1;
-            border-style: solid;
+            box-shadow: inset 0 0 0 1px black;
             padding: 0%;
         }
         .week-header{
@@ -42,7 +41,7 @@
         .timestamp {
             width: 100%;
             margin: 0%;
-            height: 7.14285714%;
+            height: 7.142857%;
         }
         .tab {
             border-right: 1px solid #000;
@@ -79,9 +78,9 @@
 
             <!-- times -->
             <div class="col-1" style="padding: 0%; height: 100%;">
-                <div class="week-header" style="height: 5%; background-color: #fff; box-shadow: none; margin-bottom: 0px;">
+                <div class="week-header" style="height: 5%; background-color: #fff; box-shadow: none; margin-bottom: 1px;">
                 </div>
-                <div id="times" class="box" style="height: 95%; border-top:1px; border-style:solid">
+                <div id="times" class="box" style="height: 95%;">
                     <script>
                         // get start and end times
                         var start = parseInt(document.getElementById("start").innerHTML)
@@ -179,7 +178,7 @@
                             time.setAttribute("class", "time")
                             var innerRow = document.createElement("div")
                             innerRow.setAttribute("class", "row")
-                            innerRow.setAttribute("style", "height:100%; margin:0; padding-top:1")
+                            innerRow.setAttribute("style", "height:100%; padding-right:1px; padding-left:1px; margin:0; padding-bottom:0; padding-top:0")
 
                             time.appendChild(innerRow)
                             row.appendChild(time)
